samples/_failures_safe/1761729743_060331_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0af65327.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_0af65327.c:136:25: error: ‘sample’ undeclared (first use in this function)
  136 |     for (int i = 0; i < sample
      |                         ^~~~~~
./samples/SAFE/__tmp_0af65327.c:136:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0af65327.c:136:31: error: expected ‘;’ at end of input
  136 |     for (int i = 0; i < sample
      |                               ^
      |                               ;
./samples/SAFE/__tmp_0af65327.c:136:5: error: expected declaration or statement at end of input
  136 |     for (int i = 0; i < sample
      |     ^~~
